# deformable_gym

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  manifest.xml  pyproject.toml  requirements.txt  setup.py
submodules/april_robot_description_src/src/april_robot_description/: CMakeLists.txt  package.xml
submodules/april_robot_description_src/src/april_robot_description/config/: robot.rviz
submodules/april_robot_description_src/src/april_robot_description/launch/: test_robot_urdf.launch  test_urdf.launch  upload_urdf_to_param_server.launch
submodules/april_robot_description_src/src/april_robot_description/launch/robot_specific_urdf/: upload_mia_hand_ghi_on_ur5_urdf.launch  upload_mia_hand_ghi_urdf.launch  upload_mia_hand_on_ur10e_urdf.launch  upload_mia_hand_on_ur5_urdf.launch  upload_mia_hand_urdf.launch  upload_shadow_hand_on_ur5_urdf.launch  upload_shadow_hand_urdf.launch  upload_ur5_urdf.launch
submodules/april_robot_description_src/src/april_robot_description/urdf/: gzplugin_grasp_fix.urdf.xacro  mia_hand.urdf  mia_hand.urdf.xacro  mia_hand_ghi.urdf.xacro  mia_hand_ghi_on_ur5.urdf.xacro  mia_hand_on_ur10.urdf  mia_hand_on_ur10.urdf.xacro  mia_hand_on_ur10_ft.urdf  mia_hand_on_ur10_ft.urdf.xacro  mia_hand_on_ur10e.urdf  mia_hand_on_ur10e.urdf.xacro  mia_hand_on_ur5.urdf.xacro  prefix.urdf.xacro  robotiq_ft300.urdf.xacro  robotiq_fts150.urdf.xacro  shadow_hand.urdf  shadow_hand.urdf.xacro  shadow_hand_on_ur10.urdf.xacro  shadow_hand_on_ur10e.urdf  shadow_hand_on_ur10e.urdf.xacro  shadow_hand_on_ur5.urdf  shadow_hand_on_ur5.urdf.xacro  stand.urdf.xacro  ur10.urdf.xacro  ur10_on_stand.urdf.xacro  ur10e.urdf.xacro  ur10e_on_stand.urdf.xacro  ur5.urdf.xacro  ur5_on_stand.urdf.xacro
submodules/april_robot_description_src/src/april_robot_description/urdf/calibrated/: calib_ur5.urdf.xacro  mia_hand_on_calib_ur5.urdf.xacro
submodules/april_robot_description_src/src/april_robot_description/urdf/gazebo_ros_vel/: mia_hand.urdf.xacro
submodules/april_robot_description_src/src/mia_hand/mia_hand_bringup/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
submodules/april_robot_description_src/src/mia_hand/mia_hand_bringup/config/: joint_state_control.yaml  mia_hand.rviz  mia_hand_effort_control.yaml  mia_hand_position_control.yaml  mia_hand_trajectory_control.yaml  mia_hand_velocity_control.yaml
submodules/april_robot_description_src/src/mia_hand/mia_hand_bringup/doc/html/: dir_16eae5bdc31e3835be43a24fad4cb85b.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_967dcc5af9ceeff420443176a73fe89c.html  dir_a4df987bed69f0105d8a793b52b73ee8.html  dir_abb65a9c3d79823bf9448793be1c70ea.html  globals.html  globals_func.html  graph_legend.html  index.html  md_home_prensila_ros_ws_src_mia_hand_ros_pkgs_mia_hand_bringup__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html
submodules/april_robot_description_src/src/mia_hand/mia_hand_bringup/doc/latex/: dir_16eae5bdc31e3835be43a24fad4cb85b.tex  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.tex  dir_967dcc5af9ceeff420443176a73fe89c.tex  dir_a4df987bed69f0105d8a793b52b73ee8.tex  md_home_prensila_ros_ws_src_mia_hand_ros_pkgs_mia_hand_bringup__r_e_a_d_m_e.tex  (+1 more)
submodules/april_robot_description_src/src/mia_hand/mia_hand_bringup/launch/: mia_hand_Sim.launch  mia_hand_Sim_traj.launch  mia_hand_driver_node.launch  mia_hand_hw.launch  mia_hand_hw_moveit.launch  mia_hand_hw_traj.launch
submodules/april_robot_description_src/src/mia_hand/mia_hand_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
submodules/april_robot_description_src/src/mia_hand/mia_hand_description/calibration/: joint_limits.yaml  transmission_config_default.yaml
submodules/april_robot_description_src/src/mia_hand/mia_hand_description/config/: view_mia_hand_config.rviz
submodules/april_robot_description_src/src/mia_hand/mia_hand_description/launch/: view_mia_hand_rviz.launch
submodules/april_robot_description_src/src/mia_hand/mia_hand_description/materials/: materials.xacro
submodules/april_robot_description_src/src/mia_hand/mia_hand_description/src/: mia_thumb_opp_passivejoints.cpp  remap_mia_joint_states.cpp
submodules/april_robot_description_src/src/mia_hand/mia_hand_description/urdf/: mia_hand_gazebo.urdf.xacro  mia_hand_launch.urdf.xacro  mia_hand_onURFlange_launch.urdf.xacro
submodules/april_robot_description_src/src/mia_hand/mia_hand_driver/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
submodules/april_robot_description_src/src/mia_hand/mia_hand_driver/src/: cpp_driver.cpp  mia_hand_driver_node.cpp  ros_driver.cpp  serial_port.cpp
submodules/april_robot_description_src/src/mia_hand/mia_hand_gazebo/: CHANGELOG.rst  CMakeLists.txt  README.md  mia_hw_sim_plugins.xml  package.xml
submodules/april_robot_description_src/src/mia_hand/mia_hand_gazebo/config/: gazebo_pid_thumb_opp.yaml  mia_hand_controllers.yaml  mia_hand_trajectory_controllers.yaml
submodules/april_robot_description_src/src/mia_hand/mia_hand_gazebo/src/: Mia_hw_sim.cpp
submodules/april_robot_description_src/src/mia_hand/mia_hand_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
submodules/april_robot_description_src/src/mia_hand/mia_hand_msgs/msg/: ComponentStatus.msg  FingersData.msg  FingersStrainGauges.msg  GraspRef.msg
submodules/april_robot_description_src/src/mia_hand/mia_hand_msgs/srv/: ConnectSerial.srv  StrReq.srv  StrResp.srv
submodules/april_robot_description_src/src/mia_hand/mia_hand_ros_control/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
submodules/april_robot_description_src/src/mia_hand/mia_hand_ros_control/config/: mia_hand_hw_controllers.yaml  mia_hand_hw_trajectory_controllers.yaml  mia_hand_hw_trajectory_singleChain_controllers.yaml  rviz_moveit_config.rviz
submodules/april_robot_description_src/src/mia_hand/mia_hand_ros_control/src/: Mia_hw_node.cpp  mia_hw_interface.cpp  mia_index_transmission.cpp  mia_mrl_transmission.cpp  mia_thfle_transmission.cpp
submodules/april_robot_description_src/src/mia_hand/mia_hand_ros_pkgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+1247 files in other folders)
