<?xml version="1.0"?>

<package format="2">

  <name>mia_hand_description</name>

  <version>1.0.2</version>

  <description>
    Package containing Mia Hand URDF model. Includes Gazebo tags that allow
    for URDF usage in Gazebo simulator. Includes description of the index_thumb
    opposition passive joint.
  </description>

  <maintainer email="andreabu@prensilia.com">Andrea Burani</maintainer>
  <maintainer email="francescaci@prensilia.com">Francesca Cini</maintainer>


  <license>BSD</license>

  <url type="website">https://wiki.ros.org/mia_hand_ros_pkgs</url>
  <url type="repository">https://bitbucket.org/prensiliasrl/mia_hand_ros_pkgs.git</url>

  <author email="francescaci@prensilia.com">Francesca Cini</author>
  <author email="oscar.lima@dfki.de">Oscar Lima</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>yaml-cpp</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>urdf</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rostime</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>joint_limits_interface</build_export_depend>
  <build_export_depend>urdf</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rostime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>urdf</exec_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>

</package>
