<?xml version="1.0"?>

<package format="2">

  <name>mia_hand_gazebo</name>

  <version>1.0.2</version>

  <description>
    Package for simulating Mia Hand in Gazebo, interfacing simulation with ROS
    Control.
  </description>

  <maintainer email="andreabu@prensilia.com">Andrea Burani</maintainer>
  <maintainer email="francescaci@prensilia.com">Francesca Cini</maintainer>

  <license>BSD</license>

  <url type="website">https://wiki.ros.org/mia_hand_ros_pkgs</url>
  <url type="repository">https://bitbucket.org/prensiliasrl/mia_hand_ros_pkgs.git</url>

  <author email="andreabu@prensilia.com">Andrea Burani</author>
  <author email="francescaci@prensilia.com">Francesca Cini</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>mia_hand_description</build_depend>
  <build_depend>mia_hand_ros_control</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>urdf</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>mia_hand_description</build_export_depend>
  <build_export_depend>mia_hand_ros_control</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>angles</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>control_toolbox</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>transmission_interface</build_export_depend>
  <build_export_depend>joint_limits_interface</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>urdf</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>mia_hand_description</exec_depend>
  <exec_depend>mia_hand_ros_control</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>urdf</exec_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>mia_hand_description</exec_depend>
  <exec_depend>mia_hand_ros_control</exec_depend>

  <doc_depend>doxygen</doc_depend>

  <export>

    <gazebo_ros_control plugin="${prefix}/mia_hw_sim_plugins.xml"/>

  </export>

</package>
