<?xml version="1.0"?>

<package format="2">

  <name>mia_hand_ros_control</name>

  <version>1.0.2</version>

  <description>
    Package for interfacing Mia Hand to ROS Control.

    Tested under ubuntu 18.04.3 LTS and 20.04.01 and ROS Noetic.
  </description>

  <maintainer email="andreabu@prensilia.com">Andrea Burani</maintainer>
  <maintainer email="francescaci@prensilia.com">Francesca Cini</maintainer>

  <license>BSD</license>

  <url type="website">https://wiki.ros.org/mia_hand_ros_pkgs</url>
  <url type="repository">https://bitbucket.org/prensiliasrl/mia_hand_ros_pkgs.git</url>


  <author email="andreabu@prensilia.com">Andrea Burani</author>
  <author email="francescaci@prensilia.com">Francesca Cini</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>yaml-cpp</buildtool_depend>

  <build_depend>common_rosdeps</build_depend>
  <build_depend>mia_hand_driver</build_depend>
  <build_depend>mia_hand_description</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>rqt_joint_trajectory_controller</build_depend>


  <build_export_depend>mia_hand_driver</build_export_depend>
  <build_export_depend>mia_hand_description</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>transmission_interface</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>control_toolbox</build_export_depend>
  <build_export_depend>joint_limits_interface</build_export_depend>
  <build_export_depend>rqt_joint_trajectory_controller</build_export_depend>

  <exec_depend>common_rosdeps</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>mia_hand_driver</exec_depend>
  <exec_depend>mia_hand_description</exec_depend>
  <exec_depend>rqt_joint_trajectory_controller</exec_depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <!-- In case any new plugin or library will be exported. Otherwise, this tag
    can be eliminated. -->
  </export>

</package>
