<?xml version="1.0"?>
<package format="2">
  <name>mia_hand_ros_pkgs</name> <!-- This is a meta package! -->
  <version>1.0.2</version>

  <description>ROS packages to use Mia Hand with ROS tools and ROS control. </description>

  <maintainer email="andreabu@prensilia.com">Andrea Burani</maintainer>
  <maintainer email="francescaci@prensilia.com">Francesca Cini</maintainer>


  <license>BSD</license>

  <url type="website">https://wiki.ros.org/mia_hand_ros_pkgs</url>
  <url type="repository">https://bitbucket.org/prensiliasrl/mia_hand_ros_pkgs.git</url>

  <author email="francescaci@prensilia.com">Francesca Cini</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>mia_hand_bringup</exec_depend>
  <exec_depend>mia_hand_description</exec_depend>
  <exec_depend>mia_hand_driver</exec_depend>
  <exec_depend>mia_hand_gazebo</exec_depend>
  <exec_depend>mia_hand_moveit_config</exec_depend>
  <exec_depend>mia_hand_msgs</exec_depend>
  <exec_depend>mia_hand_ros_control</exec_depend>

  <doc_depend>doxygen</doc_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage/>
  </export>

</package>
